# nixcfg

./: .gitignore  README.md  flake.nix
common/: default.nix  xmonad.nix
emacs/: init.el
home/: home.nix  nvim.nix  ssh.nix  zsh.nix
hosts/common/: bootloader.nix  default.nix  fonts.nix  gnupg.nix  nix.nix  pipewire.nix  ssh.nix  xserver.nix
hosts/kubernetes/: configuration.nix
hosts/mbp/: configuration.nix  homebrew.nix  launchd.nix
hosts/thinkpad/: default.nix  hardware-configuration.nix
lib/: default.nix  mkImports.nix
neovim/: .stylua.toml  init.lua
neovim/lua/: keymaps.lua
neovim/lua/plugins/: alpha.lua  git.lua  harpoon.lua  langs.lua  lsp.lua  misc.lua  oil.lua  telescope.lua  treesitter.lua  which-key.lua  workspaces.lua
nix/home/: aerospace.nix  fish.nix  ghostty.nix  git.nix  home.nix  nvim.nix  sketchybar.nix  tmux.nix  vscode.nix  zsh.nix
nix/home/sketchybar/: default.nix  sketchybar-plugin-aerospace.nix  sketchybar-plugin-battery.nix  sketchybar-plugin-clock.nix  sketchybar-plugin-front-app.nix  sketchybar-plugin-space.nix  sketchybar-plugin-volume.nix
nix/hosts/mbp/: configuration.nix  homebrew.nix  launchd.nix
nix/overlays/: default.nix
nix/overlays/bean-price/: default.nix
nix/secrets/: secrets.nix  user-name.age
overlay/: gh-stars.nix  manga-cli.nix  overlay.nix
systems/thinkpad/: configuration.nix  default.nix  hardware-configuration.nix
templates/: default.nix
templates/haskell/: .gitignore  flake.nix  haskell-template.cabal
templates/haskell/src/: Lib.hs
users/noghartt/: default.nix
(+37 files in other folders)
