cabal-version:      2.4
name:               haskell-template
version:            0.1.0.0

author:     Guilherme Ananias
maintainer: hi@noghartt.dev
license:    Unlicense

library
    exposed-modules: HaskellTemplate
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>= 4.15.1.0

executable haskell-template
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>= 4.15.1.0,
        haskell-template
